tests/negative/parse_unclosed_brace.uzpp
// XATOLIK_KUTILMOQDA: parse: yopilmagan blok
ulash "uzpp_runtime.hpp"
butun asosiy() {
    yozish << "salom" << qator_oxiri;
